DevOps/force-app/main/default/objects/Session__c/fields/Active_Holding_Marker__c.field-meta.xml
<CustomField>
    <fullName>Active_Holding_Marker__c</fullName>
    <description>Used to mark and count the amount of Active Holding fields</description>
    <formula>IF(ISPICKVAL(Service__c, &apos;222&apos;), 1, 0)</formula>
    <label>Active Holding Marker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>