DevOps/force-app/main/default/objects/Session__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>CF - Activity Type</description>
    <inlineHelpText>CF - Activity Type</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement and Rapport Building</fullName>
            </value>
            <value>
                <fullName>Support Interacting with My Aged Care</fullName>
            </value>
            <value>
                <fullName>Support Explaining and Guiding Aged Care Assessment Process</fullName>
            </value>
            <value>
                <fullName>Support Finding and Connecting with Aged Care Supports and Services</fullName>
            </value>
            <value>
                <fullName>High Level Check In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>