DevOps/force-app/main/default/objects/Session__c/fields/Additional_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Additional_Concerns__c</fullName>
    <label>Additional Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>