DevOps/force-app/main/default/objects/Session__c/fields/Any_other_potential_risks__c.field-meta.xml
<CustomField>
    <fullName>Any_other_potential_risks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any other known potential risks that have come to light?</inlineHelpText>
    <label>Any other potential risks?</label>
    <type>Checkbox</type>
</CustomField>