DevOps/force-app/main/default/objects/Session__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>CASE(Visit_Status__c, 
&quot;Step 1 Approved&quot;, IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Approved&quot;), 
&quot;Step 1 Rejected&quot;, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Rejected&quot;),
&quot;Step 1 Approval Pending&quot;, IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Pending&quot;),
&quot;Step 2 Approved&quot;, IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Approved&quot;), 
&quot;Step 2 Rejected&quot;, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Rejected&quot;),
&quot;Step 2 Approval Pending&quot;, IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Pending&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>