DevOps/force-app/main/default/objects/Session__c/fields/Are_there_concerns_with_home_visit__c.field-meta.xml
<CustomField>
    <fullName>Are_there_concerns_with_home_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you concerned about conducting a home visit after speaking with the client?</inlineHelpText>
    <label>Are there concerns with home visit?</label>
    <type>Checkbox</type>
</CustomField>