DevOps/force-app/main/default/objects/Session__c/fields/Ask_client_to_come_to_office__c.field-meta.xml
<CustomField>
    <fullName>Ask_client_to_come_to_office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ask client to come to office?</label>
    <type>Checkbox</type>
</CustomField>