DevOps/force-app/main/default/objects/Session__c/fields/Asked_if_client_has_pets__c.field-meta.xml
<CustomField>
    <fullName>Asked_if_client_has_pets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asked if client has pets?</label>
    <type>Checkbox</type>
</CustomField>