DevOps/force-app/main/default/objects/Session__c/fields/Assistance_Identified_Referred_Provided__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Identified_Referred_Provided__c</fullName>
    <description>RCC - Type of Assistance Identified, Referred, or Provided</description>
    <inlineHelpText>RCC - Type of Assistance Identified, Referred, or Provided</inlineHelpText>
    <label>Assistance Identified/Referred/Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Relief</fullName>
            </value>
            <value>
                <fullName>Temporary Housing</fullName>
            </value>
            <value>
                <fullName>Long Term Housing Solution</fullName>
            </value>
            <value>
                <fullName>Rebuild Support</fullName>
            </value>
            <value>
                <fullName>Property Clean-Up</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Property Access Issues</fullName>
            </value>
            <value>
                <fullName>Primary Producer / Agricultural Support</fullName>
            </value>
            <value>
                <fullName>Fencing</fullName>
            </value>
            <value>
                <fullName>Material Aid</fullName>
            </value>
            <value>
                <fullName>Financial Grant Assistance</fullName>
            </value>
            <value>
                <fullName>Financial Counselling</fullName>
            </value>
            <value>
                <fullName>Psycho-Social Support</fullName>
            </value>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Mental Health Support (Clinical)</fullName>
            </value>
            <value>
                <fullName>Alcohol and Other Drugs</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Health Issues</fullName>
            </value>
            <value>
                <fullName>Age / Disability Support</fullName>
            </value>
            <value>
                <fullName>Family Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>