DevOps/force-app/main/default/objects/Session__c/fields/Background_Checks__c.field-meta.xml
<CustomField>
    <fullName>Background_Checks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has a background check been completed with FaCS, Police, JJ, other agency?</description>
    <inlineHelpText>Has a background check been completed with FaCS, Police, JJ, other agency?</inlineHelpText>
    <label>Background Checks</label>
    <type>Checkbox</type>
</CustomField>