DevOps/force-app/main/default/objects/Session__c/fields/Brief_Intervention_Training__c.field-meta.xml
<CustomField>
    <fullName>Brief_Intervention_Training__c</fullName>
    <label>Brief Intervention Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communicating with confidence</fullName>
            </value>
            <value>
                <fullName>Understanding my anger</fullName>
            </value>
            <value>
                <fullName>Physical activity for wellbeing</fullName>
            </value>
            <value>
                <fullName>Understanding and managing my moods and anxiety</fullName>
            </value>
            <value>
                <fullName>Problem-solving skills</fullName>
            </value>
            <value>
                <fullName>Mindfulness and relaxation</fullName>
            </value>
            <value>
                <fullName>Understanding and Accepting myself</fullName>
            </value>
            <value>
                <fullName>Sleeping Well</fullName>
            </value>
            <value>
                <fullName>Nutrition for Wellbeing</fullName>
            </value>
            <value>
                <fullName>Psychoeducation provided to family and/or guardian to supplement supports provided to participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>