DevOps/force-app/main/default/objects/Session__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage</label>
    <referenceTo>Brokerage__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>