DevOps/force-app/main/default/objects/Session__c/fields/Buddy__c.field-meta.xml
<CustomField>
    <fullName>Buddy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VisitBuddy</relationshipName>
    <type>Lookup</type>
</CustomField>