DevOps/force-app/main/default/objects/Session__c/fields/Buddy_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Buddy_Alert_Sent__c</fullName>
    <label>Buddy Alert Sent</label>
    <type>DateTime</type>
</CustomField>