DevOps/force-app/main/default/objects/Session__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Only Sessions related to the Case&apos;s Program may be selected</errorMessage>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>equals</operation>
            <valueField>Case.Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>