DevOps/force-app/main/default/objects/Session__c/fields/Case_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Full_Name__c</fullName>
    <formula>Case__r.Contact.Fullname__c</formula>
    <label>Case Contact Full Name</label>
    <type>Text</type>
</CustomField>