DevOps/force-app/main/default/objects/Session__c/fields/Case_Contact_is_Session_Participant__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_is_Session_Participant__c</fullName>
    <formula>IF
(
  AND
  (
    ISBLANK(Case__c) = false,
    ISBLANK(Case__r.ContactId) = false,
    ISBLANK(Case_Contact_Session_Participant__c) = false,
    ISBLANK(Case_Contact_Session_Participant__r.Contact__c) = false,
    Case__r.ContactId = Case_Contact_Session_Participant__r.Contact__c
  ),
  true,
  false
)</formula>
    <label>Case Contact is Session Participant?</label>
    <type>Checkbox</type>
</CustomField>