DevOps/force-app/main/default/objects/Session__c/fields/Case_Contact_Session_Participant__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Session_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the Case&apos;s Contact was a Participant in this Session, this will be the Session Participant record.</inlineHelpText>
    <label>Case Contact Session Participant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Session Participant Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Session_Participant__c.Session__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Session_Participant__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>