DevOps/force-app/main/default/objects/Session__c/fields/Case_Notes_Indirect_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes_Indirect_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Case Notes Indirect Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>