DevOps/force-app/main/default/objects/Session__c/fields/Case_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Program_Id__c</fullName>
    <formula>CASESAFEID(Case__r.Program__c)</formula>
    <label>Case Program Id</label>
    <type>Text</type>
</CustomField>