DevOps/force-app/main/default/objects/Session__c/fields/CIMS_Note_Id__c.field-meta.xml
<CustomField>
    <fullName>CIMS_Note_Id__c</fullName>
    <label>CIMS Note Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>