DevOps/force-app/main/default/objects/Session__c/fields/CIMS_Unique_Check__c.field-meta.xml
<CustomField>
    <fullName>CIMS_Unique_Check__c</fullName>
    <externalId>true</externalId>
    <label>CIMS Unique Check</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>