DevOps/force-app/main/default/objects/Session__c/fields/Client_Participation_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Client_Participation_Indicator__c</fullName>
    <description>CC - Service Contact - Client Participation Indicator</description>
    <inlineHelpText>CC - Service Contact - Client Participation Indicator</inlineHelpText>
    <label>Client Participation Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>