DevOps/force-app/main/default/objects/Session__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Cloned To</relationshipLabel>
    <relationshipName>ClonedTo</relationshipName>
    <type>Lookup</type>
</CustomField>