DevOps/force-app/main/default/objects/Session__c/fields/Collection_Period__c.field-meta.xml
<CustomField>
    <fullName>Collection_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Period</label>
    <referenceTo>Collection_Period__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>