DevOps/force-app/main/default/objects/Session__c/fields/Collection_Period_Id__c.field-meta.xml
<CustomField>
    <fullName>Collection_Period_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Collection Period Id</label>
    <type>Text</type>
</CustomField>