DevOps/force-app/main/default/objects/Session__c/fields/Contact_Attempt_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Contact_Attempt_Outcome__c</fullName>
    <description>The Outcome of an Unsuccessful Contact Attempt</description>
    <inlineHelpText>The Outcome of an Unsuccessful Contact Attempt</inlineHelpText>
    <label>Contact Attempt Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left voicemail inviting callback</fullName>
            </value>
            <value>
                <fullName>No voicemail option</fullName>
            </value>
            <value>
                <fullName>Sent text message</fullName>
            </value>
            <value>
                <fullName>Voicemail and text</fullName>
            </value>
            <value>
                <fullName>Note left under door</fullName>
            </value>
            <value>
                <fullName>Knocked on door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>