DevOps/force-app/main/default/objects/Session__c/fields/Contact_to_notify__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_notify__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that will receive SMS notifications</description>
    <inlineHelpText>Contact that will receive SMS notifications</inlineHelpText>
    <label>Contact to notify</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>