DevOps/force-app/main/default/objects/Session__c/fields/Copayment__c.field-meta.xml
<CustomField>
    <fullName>Copayment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CC - Service Contact - Copayment</description>
    <inlineHelpText>CC - Service Contact - Copayment</inlineHelpText>
    <label>Co-Payment</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>