DevOps/force-app/main/default/objects/Session__c/fields/Creating_Users_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Creating_Users_Timezone__c</fullName>
    <formula>TEXT(CreatedBy.TimeZoneSidKey)</formula>
    <label>Creating User&apos;s Timezone</label>
    <type>Text</type>
</CustomField>