DevOps/force-app/main/default/objects/Session__c/fields/Date_of_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Contact__c</fullName>
    <formula>IF(ISPICKVAL(Service__c,&quot;2&quot;), DATEVALUE(Start_Date_Time__c),NULL)</formula>
    <label>Date of Last Contact</label>
    <type>Date</type>
</CustomField>