DevOps/force-app/main/default/objects/Session__c/fields/Decision_to_conduct_home_visit__c.field-meta.xml
<CustomField>
    <fullName>Decision_to_conduct_home_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision to conduct home visit?</label>
    <type>Checkbox</type>
</CustomField>