DevOps/force-app/main/default/objects/Session__c/fields/Dex_Data_Completeness__c.field-meta.xml
<CustomField>
    <fullName>Dex_Data_Completeness__c</fullName>
    <label>Dex Data Completeness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>