DevOps/force-app/main/default/objects/Session__c/fields/Dex_Id__c.field-meta.xml
<CustomField>
    <fullName>Dex_Id__c</fullName>
    <formula>IF
(
NOT(ISBLANK( Session_Ref__c )),
Session_Ref__c ,
CASESAFEID( Id )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dex Id</label>
    <type>Text</type>
</CustomField>