DevOps/force-app/main/default/objects/Session__c/fields/Dex_Ignore_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Dex_Ignore_Cutoff_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dex Ignore Cutoff Date</label>
    <type>Checkbox</type>
</CustomField>