DevOps/force-app/main/default/objects/Session__c/fields/Dex_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Dex_Last_Sync__c</fullName>
    <label>Dex Last Sync</label>
    <type>DateTime</type>
</CustomField>