DevOps/force-app/main/default/objects/Session__c/fields/Dex_Session_Assessments_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>Dex_Session_Assessments_Sync_Message__c</fullName>
    <label>Dex Session Assessments Sync Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>