DevOps/force-app/main/default/objects/Session__c/fields/Dex_Session_Assessments_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Dex_Session_Assessments_Sync_Status__c</fullName>
    <label>Dex Assessments Sync Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>