DevOps/force-app/main/default/objects/Session__c/fields/Dex_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>Dex_Sync_Message__c</fullName>
    <label>Dex Sync Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>