DevOps/force-app/main/default/objects/Session__c/fields/Do_they_live_in_an_isolated_location__c.field-meta.xml
<CustomField>
    <fullName>Do_they_live_in_an_isolated_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they live in an isolated location?</label>
    <type>Checkbox</type>
</CustomField>