DevOps/force-app/main/default/objects/Session__c/fields/Duration_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Hours__c</fullName>
    <formula>VALUE(TEXT(Duration_Hours__c)) + (VALUE(TEXT(Duration_Minutes__c)) / 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>