DevOps/force-app/main/default/objects/Session__c/fields/Existing_Participant_Records__c.field-meta.xml
<CustomField>
    <fullName>Existing_Participant_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If participant is known to Social Futures, are the conditions or assessments on file outdated?</description>
    <inlineHelpText>If participant is known to Social Futures, are the conditions or assessments on file outdated?</inlineHelpText>
    <label>Existing Participant Records</label>
    <type>Checkbox</type>
</CustomField>