DevOps/force-app/main/default/objects/Session__c/fields/Extra_Items__c.field-meta.xml
<CustomField>
    <fullName>Extra_Items__c</fullName>
    <label>Extra Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexExtraItem</valueSetName>
    </valueSet>
</CustomField>