DevOps/force-app/main/default/objects/Session__c/fields/Family_Services_Needs_Identified__c.field-meta.xml
<CustomField>
    <fullName>Family_Services_Needs_Identified__c</fullName>
    <label>Family Services: Needs Identified</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeteorServiceAndAssitanceFamilyDomestic</valueSetName>
    </valueSet>
</CustomField>