DevOps/force-app/main/default/objects/Session__c/fields/Fees_Charged__c.field-meta.xml
<CustomField>
    <fullName>Fees_Charged__c</fullName>
    <label>Fees Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>