DevOps/force-app/main/default/objects/Session__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <description>CC - Service Contact - Final</description>
    <inlineHelpText>CC - Service Contact - Final</inlineHelpText>
    <label>Final</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Further services are planned for the client in the current episode</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>No further services are planned for the client in the current episode</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Not known at this stage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>