DevOps/force-app/main/default/objects/Session__c/fields/Finish_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date_Time__c</fullName>
    <label>Finish Date / Time</label>
    <type>DateTime</type>
</CustomField>