DevOps/force-app/main/default/objects/Session__c/fields/Finish_Date_Time_Plus_Delay__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date_Time_Plus_Delay__c</fullName>
    <formula>Finish_Date_Time__c + (Finish_Delay__c / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish Date Time Plus Delay</label>
    <type>DateTime</type>
</CustomField>