DevOps/force-app/main/default/objects/Session__c/fields/Firearms_Knife_or_Sword_Collections__c.field-meta.xml
<CustomField>
    <fullName>Firearms_Knife_or_Sword_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asked if there are firearms on the property – if yes, home visits are not authorised</description>
    <inlineHelpText>Asked if there are firearms on the property – if yes, home visits are not authorised</inlineHelpText>
    <label>Firearms, Knife or Sword Collections</label>
    <type>Checkbox</type>
</CustomField>