DevOps/force-app/main/default/objects/Session__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <description>PHN - Funding Source</description>
    <formula>IF(Program_Name__c = &quot;Veterans Connect&quot;, &quot;11&quot;, &quot;17&quot;)</formula>
    <inlineHelpText>CC, VCC, CCHM - Funding Source</inlineHelpText>
    <label>Funding Source</label>
    <type>Text</type>
</CustomField>