DevOps/force-app/main/default/objects/Session__c/fields/General_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>General_Services_Provided__c</fullName>
    <label>General Services: Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeteorServiceAndAssitanceGeneralOptions</valueSetName>
    </valueSet>
</CustomField>