DevOps/force-app/main/default/objects/Session__c/fields/Going_with_rep_from_another_agency__c.field-meta.xml
<CustomField>
    <fullName>Going_with_rep_from_another_agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Going with rep from another agency?</label>
    <type>Checkbox</type>
</CustomField>