DevOps/force-app/main/default/objects/Session__c/fields/History_of_Illegal_Activities__c.field-meta.xml
<CustomField>
    <fullName>History_of_Illegal_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there any suggestion of or history of illegal activities in the home?</description>
    <inlineHelpText>Is there any suggestion of or history of illegal activities in the home?</inlineHelpText>
    <label>History of Illegal Activities</label>
    <type>Checkbox</type>
</CustomField>