DevOps/force-app/main/default/objects/Session__c/fields/History_of_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>History_of_Mental_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there identified history of a mental health illness?</description>
    <inlineHelpText>Is there identified history of a mental health illness?</inlineHelpText>
    <label>History of Mental Health</label>
    <type>Checkbox</type>
</CustomField>